  removed since the archive of reference was done. The file to remove was
  always removed from the current directory (missing the path part), most
  of the time this was leading to the error message "Error removing file
  ...: Not such file or directory". I could also lead to incorrectly
  removing files (not directory) located in the directory from which
  dar was run.

from 2.5.x to 2.6.0
- new feature: support for binary delta in incremental/differential backups
  (relying on librsync)
- new feature: support ftp/sftp to read an archive from a cloud storage.
  (relying on libcurl)
  reading is optimized to not transfer a whole slice but only the needed
  part to proceed to the operation (restoration, listing, and so on)
- new feature: support ftp/sftp to write an archive eventually with hash
  files to a remote cloud storage (relying on libcurl)
- modified behavior: While creating a single sliced archive, DUC file is
  now executed unless user interrupted dar/libdar. This to stay coherent
  with multi sliced archive behavior
- new feature: display filters nature (-vmasks option)
- new feature: follow some symlinks as defined by the --ignored-as-symlink
  option
- new feature: one can define the compression algorithm a dar_manager
  database will use. This choice is only available at database creation
  using the new dar_manager's -z option. In particular "-z none" can be
  used to avoid using compression at all
- repair mode added to re-create a completed archive (suitable for direct
  access mode and merging) from an interrupted one due to lack of disk
  space, power outage or other reasons leading to similar problem.
- Dar can now only save metadata inode change without re-saving the whole
  file if its data has not changed. Dar_manager also handle this by
  restoring the full backup and then the inode metadata only when
  necessary.
- In regard to previous point, if you want to keep having dar saving the