@@ -9,6 +9,8 @@ from 2.6.0 to 2.6.1
   ...: Not such file or directory". I could also lead to incorrectly
   removing files (not directory) located in the directory from which
   dar was run.
+- fixing bug met while reparing an archive containing delta signature
+  for unsaved files
 
 from 2.5.x to 2.6.0
 - new feature: support for binary delta in incremental/differential backups
